reformat emoticons